# easygl-glad

./: CMakeLists.txt  README.md
include/: buffer.h  framebuffer.h  program.h  shader.h  vertex_layout.h
include/easygl/: buffer.h  common.h  common.hpp  easygl.hpp  framebuffer.h  program.h  shader.h  utils.h  vertex_layout.h
src/: buffer.cpp  framebuffer.cpp  program.cpp  shader.cpp  utils.cpp  vertex_layout.cpp
